--- a/index.html
+++ b/index.html
@@ -5,8 +5,54 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Coding Ninja Offers</title>
+    <link
+      rel="shortcut icon"
+      href="/assests/favicons/favicon.ico"
+      type="image/x-icon"
+    />
+    <!-- Font awesome CDN -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+      integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <!-- Style sheets -->
+    <link rel="stylesheet" href="./assests/styles/index.css" />
+    <link rel="stylesheet" href="./assests/styles/logo.css" />
+    <link rel="stylesheet" href="./assests/styles/navbar.css" />
+    <script src="./assests/scripts/script.js" defer></script>
   </head>
   <body>
-    Offers
+    <!-- Nav bar starts -->
+
+    <nav>
+      <div class="logo-ham">
+        <div class="logo">
+          <img src="./assests/icons/shuriken.png" alt="Ninja Star" />
+          <div class="logo-text">
+            <p class="logo-text-1">Coding Ninjas</p>
+            <p class="logo-text-2">Offers</p>
+          </div>
+        </div>
+        <i class="fa-solid fa-bars"></i>
+      </div>
+      <ul class="nav-items">
+        <li class="active"><a class="nav-link" href="#courses">Courses</a></li>
+        <li>
+          <a class="nav-link" href="#scholarship"
+            >Scholarship <span class="scholar-off">Upto 100% OFF</span></a
+          >
+        </li>
+        <li><a class="nav-link" href="#benefits">Benefits</a></li>
+        <li><a class="nav-link" href="#features">Features</a></li>
+        <li><a class="nav-link" href="#proofs">Proofs</a></li>
+        <li><a class="nav-link" href="#how-to">How To?</a></li>
+        <li><a class="nav-link" href="#faq">FAQ</a></li>
+      </ul>
+    </nav>
+
+    <!-- Nav bar Ends -->
   </body>
 </html>
