--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     <link rel="stylesheet" href="./assests/styles/index.css" />
     <link rel="stylesheet" href="./assests/styles/logo.css" />
     <link rel="stylesheet" href="./assests/styles/navbar.css" />
+    <link rel="stylesheet" href="./assests/styles/landing-display.css" />
+
+    <!-- Javascript Files -->
     <script src="./assests/scripts/script.js" defer></script>
   </head>
   <body>
@@ -52,7 +55,37 @@
         <li><a class="nav-link" href="#faq">FAQ</a></li>
       </ul>
     </nav>
-
     <!-- Nav bar Ends -->
+
+    <!-- Landing Display Starts -->
+    <div class="landing-display">
+      <div class="display-text">
+        <div class="larger-text">
+          <p>Get <span>MAXIMUM</span></p>
+          <p>Discount</p>
+          <p>Now</p>
+        </div>
+        <div class="smaller-text">
+          <p>Approved by Coding Ninja Team</p>
+          <p>
+            Since 2021, We've benefited over <span>4534</span> Students to save
+            more than <span>Rs 71,45,201</span>.
+          </p>
+        </div>
+        <div class="btns">
+          <a href="#" target="_blank" class="get-now-btn">GET NOW</a>
+          <div class="copy-code-btn">
+            CODE HERE <i class="fa-regular fa-copy"></i>
+          </div>
+        </div>
+      </div>
+      <div class="display-img">
+        <img
+          src="./assests/images/display-section.png"
+          alt="person working in a laptop"
+        />
+      </div>
+    </div>
+    <!-- Landing Display Ends -->
   </body>
 </html>
