added scholar ship section

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="./assests/styles/logo.css" />
     <link rel="stylesheet" href="./assests/styles/navbar.css" />
     <link rel="stylesheet" href="./assests/styles/landing-display.css" />
+    <link rel="stylesheet" href="./assests/styles/scholarship.css" />
 
     <!-- Javascript Files -->
     <script src="./assests/scripts/script.js" defer></script>
@@ -87,5 +88,42 @@
       </div>
     </div>
     <!-- Landing Display Ends -->
+
+    <!-- Scholarship section Starts -->
+    <div id="scholarship">
+      <div class="cnsat-img">
+        <img src="./assests/images/cnsat.png" alt="cnsat logo" />
+      </div>
+      <div class="tag-line">
+        Participate and and get
+        <span> UPTO 100% Scholarship </span>
+        on any course by Coding Ninjas
+      </div>
+      <div class="info">
+        <div class="brackets">
+          <p>Scholarship Brackets</p>
+          <div class="bracket-imgs">
+            <img src="./assests/images/100.png" alt="100% bracket" />
+            <img src="./assests/images/75.png" alt="75% bracket" />
+          </div>
+        </div>
+        <div class="rewards">
+          <p>Participate in CNSAT & Get</p>
+          <ul>
+            <li>
+              <i class="fa-solid fa-laptop-code"></i> FREE access to MAANG Test
+              Series
+            </li>
+            <li><i class="fa-solid fa-trophy"></i> Training Certificates</li>
+            <li>
+              <i class="fa-sharp fa-solid fa-gifts"></i> Coding Ninja Swags
+            </li>
+            <p class="note">*Applicable only on course purchase</p>
+          </ul>
+        </div>
+      </div>
+      <a href="#" target="_blank" class="more-details-btn">For More Details</a>
+    </div>
+    <!-- Scholarship section Ends -->
   </body>
 </html>
