added icons and courses section

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="./assests/styles/navbar.css" />
     <link rel="stylesheet" href="./assests/styles/landing-display.css" />
     <link rel="stylesheet" href="./assests/styles/scholarship.css" />
+    <link rel="stylesheet" href="./assests/styles/courses.css" />
 
     <!-- Javascript Files -->
     <script src="./assests/scripts/script.js" defer></script>
@@ -125,5 +126,44 @@
       <a href="#" target="_blank" class="more-details-btn">For More Details</a>
     </div>
     <!-- Scholarship section Ends -->
+
+    <!-- Course Section Starts -->
+    <div id="courses" class="courses">
+      <h1>COURSES</h1>
+      <p>Click below to get awesome courses with <b>DISCOUNTS</b> included</p>
+      <!-- <div class="course-container">
+        <h2 class="course-title">Foundation Algorithmic & Adcanced Courses</h2>
+        <p class="course-desc">
+          Foundation courses are designed such that no prerequisites are
+          required. Data Structures(DS) and Algorithms(algo.) parts build on the
+          basics to give you a solid programming foundation. Competitive is
+          where you start to push the boundaries!
+        </p>
+        <div class="course-cards">
+          <a href="#" class="course-card">
+            <div class="course-icon">
+              <img src="./assests/icons/cpp-ds-logo.png" alt="CPP Logo" />
+            </div>
+            <div class="course-name">C++ & Data Structures</div>
+          </a>
+          <a href="#" class="course-card">
+            <div class="course-icon">
+              <img
+                src="./assests/icons/cpp-live-course-logo.svg"
+                alt="Cpp Live logo"
+              />
+            </div>
+            <div class="course-name">C++ & Data Structures Live</div>
+          </a>
+          <a href="#" class="course-card">
+            <div class="course-icon">
+              <img src="./assests/icons/java-ds-logo.png" alt="Java" />
+            </div>
+            <div class="course-name">Java & Data Structures</div>
+          </a>
+        </div>
+      </div> -->
+    </div>
+    <!-- Course Section Ends -->
   </body>
 </html>
