added premium courses section

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="./assests/styles/landing-display.css" />
     <link rel="stylesheet" href="./assests/styles/scholarship.css" />
     <link rel="stylesheet" href="./assests/styles/courses.css" />
+    <link rel="stylesheet" href="./assests/styles/premium.css" />
 
     <!-- Javascript Files -->
     <script src="./assests/scripts/script.js" defer></script>
@@ -165,5 +166,44 @@
       </div> -->
     </div>
     <!-- Course Section Ends -->
+
+    <!-- Premium Courses Section Starts -->
+    <div class="premium">
+      <h1>
+        <img src="./assests/icons/002-crown.png" alt="crown" /><span
+          >PREMIUM</span
+        >
+        <span>COURSES</span>
+      </h1>
+      <p>
+        Begin the journey for your dream job with these specializations. Start
+        strong. Build a strong foundation with these courses
+      </p>
+      <div class="premium-courses">
+        <a href="#" class="course-card">
+          <div class="course-icon">
+            <img src="./assests/icons/cpp-ds-logo.png" alt="CPP Logo" />
+          </div>
+          <div class="course-name">C++ & Data Structures</div>
+        </a>
+      </div>
+      <h2>Exclusive Offering Included With All Premium Courses</h2>
+      <div class="offerings">
+        <!-- <div class="offering-card">
+          <div class="icon">
+            <img
+              src="./assests/icons/003-job-search.png"
+              alt="job search icon"
+            />
+          </div>
+          <div class="title">Best Job Opportunities</div>
+          <div class="desc">
+            Get access to curated jobs via Coding Ninjas Placement cell and
+            Premium Hirist account
+          </div>
+        </div> -->
+      </div>
+    </div>
+    <!-- Premium Courses Section Ends -->
   </body>
 </html>
