added features sectio

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <link rel="stylesheet" href="./assests/styles/scholarship.css" />
     <link rel="stylesheet" href="./assests/styles/courses.css" />
     <link rel="stylesheet" href="./assests/styles/premium.css" />
+    <link rel="stylesheet" href="./assests/styles/features.css" />
 
     <!-- Javascript Files -->
     <script src="./assests/scripts/script.js" defer></script>
@@ -205,5 +206,27 @@
       </div>
     </div>
     <!-- Premium Courses Section Ends -->
+
+    <!-- Features Section Starts -->
+    <div class="features" id="features">
+      <h1>Features of Coding Ninjas</h1>
+      <p>Explore what else we can do for you</p>
+      <div class="features-cards">
+        <!-- <div class="feature-card">
+          <div class="icon">
+            <img
+              src="./assests/icons/feautes-small-1.svg"
+              alt="features icons"
+            />
+          </div>
+          <div class="title">Free Trials</div>
+          <div class="desc">
+            All Courses are provided with free trials of few topics, you can
+            access free contents of all courses and check its way of teaching.
+          </div>
+        </div> -->
+      </div>
+    </div>
+    <!-- Features Section Ends -->
   </body>
 </html>
