added benefits section

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <link rel="stylesheet" href="./assests/styles/courses.css" />
     <link rel="stylesheet" href="./assests/styles/premium.css" />
     <link rel="stylesheet" href="./assests/styles/features.css" />
+    <link rel="stylesheet" href="./assests/styles/benefits.css" />
 
     <!-- Javascript Files -->
     <script src="./assests/scripts/script.js" defer></script>
@@ -228,5 +229,31 @@
       </div>
     </div>
     <!-- Features Section Ends -->
+
+    <!-- Benefits Section Starts -->
+    <div class="benefits" id="benefits">
+      <div id="triangle-1"></div>
+      <div id="triangle-2"></div>
+      <h2>Benefits from Coding Ninja</h2>
+      <p>Here's Something More Interesting</p>
+      <div class="benefits-cards">
+        <!-- <div class="benefit-card">
+          <p class="num">1</p>
+          <div class="icon">
+            <img
+              src="./assests/icons/benefits1.svg"
+              alt="Benefits Illustrations"
+            />
+          </div>
+          <h3 class="title">Gift Package</h3>
+          <p class="desc">
+            This ought to be a secret, but Coding Ninjas offers you T-Shirts,
+            Notebook, Wildcraft Bagpack, Laptop stickers, and other little
+            things that would aid your learning here -- with home delivery.
+          </p>
+        </div> -->
+      </div>
+    </div>
+    <!-- Benefits Section Ends -->
   </body>
 </html>
