added how to get discounts section

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <link rel="stylesheet" href="./assests/styles/premium.css" />
     <link rel="stylesheet" href="./assests/styles/features.css" />
     <link rel="stylesheet" href="./assests/styles/benefits.css" />
+    <link rel="stylesheet" href="./assests/styles/how-to.css" />
 
     <!-- Javascript Files -->
     <script src="./assests/scripts/script.js" defer></script>
@@ -255,5 +256,98 @@
       </div>
     </div>
     <!-- Benefits Section Ends -->
+
+    <!-- How To Section Starts -->
+    <div class="how-to" id="how-to">
+      <h2>How To Get Discounts?</h2>
+      <p>
+        Before showing you the steps to following to get discounts. Check below
+        to understand about What are the possible ways to get courses at
+        <b> discounted price</b>.
+      </p>
+      <div class="dw-cards">
+        <div class="dw-card">
+          <div class="icon">
+            <img src="./assests/images/discount-way1.svg" alt="Discount Way" />
+          </div>
+          <div class="title">Early Bid Discounts</div>
+          <div class="desc">
+            Discount of 10% to 30% is already given, This varies from time from
+            starting date of course. You can wait for the perfect time to get
+            maximum discount.
+          </div>
+          <a href="#" class="btn">CHECK ONGOING DISCOUNT</a>
+        </div>
+        <div class="dw-card">
+          <div class="icon">
+            <img src="./assests/images/discount-way2.svg" alt="Discount Way" />
+          </div>
+          <div class="title">Using Referral Code</div>
+          <div class="desc">
+            You can get additional 12% discount on your 1st course. After That
+            you can also refer your friends and get discounts on your next
+            course purchase.
+          </div>
+          <a href="#" class="btn">GET MY REFERRAL</a>
+        </div>
+        <div class="dw-card">
+          <div class="icon">
+            <img src="./assests/images/discount-way3.svg" alt="Discount Way" />
+          </div>
+          <div class="title">Occasional Events</div>
+          <div class="desc">
+            Coding Ninjas oganizes coding events or scholarship test from time
+            to time, They are posted on the Coding Ninjas website. Check them
+            Regularly.
+          </div>
+          <a href="#" class="btn">CHECK LIVE EVENTS</a>
+        </div>
+      </div>
+      <div class="steps-to-avail">
+        <h2>Steps to Avail Discounts</h2>
+        <div class="time-line">
+          <div class="line"></div>
+          <div class="step">
+            <p class="step-num">1</p>
+            <div class="title">Set Up New Account</div>
+            <div class="desc">
+              Sign up in Coding Ninjas Website by providing required details
+            </div>
+          </div>
+          <div class="step">
+            <p class="step-num">2</p>
+            <div class="title">Choose a course</div>
+            <div class="desc">
+              Choose your desired course you wish to explore -- from beginner to
+              expert level
+            </div>
+          </div>
+          <div class="step">
+            <p class="step-num">3</p>
+            <div class="title">Apply Discount</div>
+            <div class="desc">
+              Open this <a href="#">coupon link</a>. This will automatically add
+              the discount coupon.
+            </div>
+          </div>
+          <div class="step">
+            <p class="step-num">4</p>
+            <div class="title">Use My Refferal</div>
+            <div class="desc">
+              On checkout, add this referral code: <span>CODE HERE</span> on the
+              apply coupon code box.
+            </div>
+          </div>
+          <div class="step">
+            <p class="last step-num">5</p>
+            <div class="title">Start Learning</div>
+            <div class="desc">
+              Enjoy the course at discounted price and achieve your goals.
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- How To Section Ends -->
   </body>
 </html>
