added faq section

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <link rel="stylesheet" href="./assests/styles/features.css" />
     <link rel="stylesheet" href="./assests/styles/benefits.css" />
     <link rel="stylesheet" href="./assests/styles/how-to.css" />
+    <link rel="stylesheet" href="./assests/styles/faq.css" />
 
     <!-- Javascript Files -->
     <script src="./assests/scripts/script.js" defer></script>
@@ -349,5 +350,131 @@
       </div>
     </div>
     <!-- How To Section Ends -->
+
+    <!-- FAQ section Starts -->
+    <div class="faq" id="faq">
+      <h2>FAQ On Coding Ninjas</h2>
+      <div class="questions">
+        <div class="question">
+          <p class="text">How to get Coding Ninja Discount Offer?</p>
+          <i class="fa-solid fa-chevron-down"></i>
+        </div>
+        <div class="answer">
+          <div class="container">
+            <b>Stept to Follow:</b>
+            <p>1. Setup an entirely new Coding Ninjas student account.</p>
+            <p>
+              2. The "I want this" button will get you a secret coupon code
+              that's specific to you and your account alone.
+            </p>
+            <p>
+              3. You can get the Early Bird Discount of 10-30% in addition to
+              this offer.
+            </p>
+            <p>4. Select your course of choice.</p>
+            <p>
+              5. Upon checkout, you'll see the coupon code automatically
+              applied.
+            </p>
+          </div>
+        </div>
+        <div class="question">
+          <p class="text">What is Coding Ninja Refferal?</p>
+          <i class="fa-solid fa-chevron-down"></i>
+        </div>
+        <div class="answer">
+          <div class="container">
+            <p>
+              Coding Ninjas Referral is a scheme/offer by coding ninjas. By
+              which you can refer you friend to buy coding ninjas course. And In
+              turn you get 12% Discount and referer gets 8% discount.
+            </p>
+            <p>
+              Normal students can give 10% coding ninjas referral discount.
+              whereas, Coding Ninjas Campus Ambassadors or Ninja Entrepreneur
+              can give 12% coding ninjas referral discount.
+            </p>
+            <p>
+              So you should definitely use Coding Ninjas Refferal Code to get
+              referral discount on coding ninjas courses.
+            </p>
+          </div>
+        </div>
+        <div class="question">
+          <p class="text">
+            Which Plan to Purchase: Basic, Standard, Pro, Premium?
+          </p>
+          <i class="fa-solid fa-chevron-down"></i>
+        </div>
+        <div class="answer">
+          <div class="container">
+            <ul>
+              <li>
+                <b>Basic:</b> The basic plan only explains the introduction to
+                programming with any one language and don't provide any other
+                placement and interview support.
+              </li>
+              <li>
+                <b>Standard: </b>
+                This plan provides only Data Structures lectures, This plan is
+                suitated for students who are already familiar with any one
+                programming language. This plan also don't provide any other
+                placement and interview support.
+              </li>
+              <li>
+                <b>Pro: </b>
+                This plan is the combination of the Basic and Standard Plans.
+                This plan teaches you 1 programming language and also Data
+                Structures along with it. But this also doesn't provide any
+                other placement and interview support.
+              </li>
+              <li>
+                <b>Premium: </b>
+                This plan consist of everything of coding ninjas, this course
+                plan provides Fundamentals, Data Structures and also provides
+                all the placement and interview support like 1:1 Mock Interview,
+                Resume and profile Building sessions, Premium Hirist account,
+                Access to Placement cell, Curated Interview problems, Mock Test
+                series and 2 months free course extension.
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="question">
+          <p class="text">Can I ask for a refund?</p>
+          <i class="fa-solid fa-chevron-down"></i>
+        </div>
+        <div class="answer">
+          <div class="container">
+            <p>Yes, you can ask for a refund.</p>
+            <p>
+              If, for whatever reason, you wake up one morning with some mood
+              swing and decide to cut short your learning process in Coding
+              Ninjas to achieving more with coding...
+            </p>
+            <p>
+              You can simply contact the authorities and they will give you a
+              full refund, but only within 7 days.
+            </p>
+          </div>
+        </div>
+        <div class="question">
+          <p class="text">
+            Is Coding Ninjas Free? Can I Get a Course for Free?
+          </p>
+          <i class="fa-solid fa-chevron-down"></i>
+        </div>
+        <div class="answer">
+          <div class="container">
+            <p>
+              No, Coding Ninjas is not free at all. All courses has its own
+              price according to duration and difficulty. But, Coding Ninjas
+              does provides a FREE TRIAL of each course.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- FAQ section Ends -->
   </body>
 </html>
