--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <link rel="stylesheet" href="./assests/styles/benefits.css" />
     <link rel="stylesheet" href="./assests/styles/how-to.css" />
     <link rel="stylesheet" href="./assests/styles/faq.css" />
+    <link rel="stylesheet" href="./assests/styles/footer.css" />
 
     <!-- Javascript Files -->
     <script src="./assests/scripts/script.js" defer></script>
@@ -476,5 +477,36 @@
       </div>
     </div>
     <!-- FAQ section Ends -->
+
+    <!-- Footer Starts -->
+    <img
+      id="footer-wave"
+      src="./assests/images/footer-wave.png"
+      alt="footer wave"
+    />
+    <footer>
+      <div class="logo">
+        <p class="logo-text-1">Coding Ninjas</p>
+        <p class="logo-text-2">Offers</p>
+      </div>
+      <div class="info">
+        <p>Transforming Tech education for next generation of developers</p>
+        <p>© copy right 2022 | All Right Reseved</p>
+      </div>
+      <div class="follow-me">
+        <div class="text">Follow Me</div>
+        <div class="icons-1">
+          <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
+          <a href="#"><i class="fa-brands fa-instagram"></i></a>
+          <a href="#"><i class="fa-brands fa-square-twitter"></i></a>
+        </div>
+        <div class="icons-2">
+          <a href="#"><i class="fa-solid fa-envelope"></i></a>
+          <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
+          <a href="#"><i class="fa-solid fa-user-ninja"></i></a>
+        </div>
+      </div>
+    </footer>
+    <!-- Footer Ends -->
   </body>
 </html>
