added few meta tags

--- a/index.html
+++ b/index.html
@@ -1,9 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Meta Tags Starts -->
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content='Utilize Coding Ninjas Coupon Code: "WVGAN" to receive a 70% Referral Discount and a savings of around Rs 5,000 on all Coding Ninjas Courses. Best Coupon Code to use to get the maximum discount.'
+    />
+    <meta
+      name="keywords"
+      content="coding ninjas coupon code, coupon code for coding ninjas, coding ninjas referral code, coding ninjas referral, coding ninjas coupon, coding ninjas coupons, coding ninjas 12% discount, coding ninjas maximum discount, coding ninjas discounts, coding ninjas discount, coding ninjas coupons, coding ninjas coupon, coding ninjas coupon code, coding ninjas referral, coding ninjas referral discounts, coding ninjas referral code, coding ninjas discount"
+    />
+    <meta property="og:site_name" content="Coding Ninjas Offers" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="SAVE MAXIMUM using Coding Ninjas Referral Discount Coupon Code"
+    />
+    <meta
+      property="og:description"
+      content="Enjoy Saving upto Rs 5,000 on Coding Ninjas Courses using Coding Ninjas Referral Discount Coupons Code."
+    />
+    <!-- Meta Tags Ends -->
     <title>Coding Ninja Offers</title>
     <link
       rel="shortcut icon"
