changed favicons location

--- a/index.html
+++ b/index.html
@@ -26,11 +26,7 @@
     />
     <!-- Meta Tags Ends -->
     <title>Coding Ninja Offers</title>
-    <link
-      rel="shortcut icon"
-      href="/assests/favicons/favicon.ico"
-      type="image/x-icon"
-    />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <!-- Font awesome CDN -->
     <link
       rel="stylesheet"
