added meta tags for twitter

--- a/index.html
+++ b/index.html
@@ -22,8 +22,28 @@
     />
     <meta
       property="og:description"
-      content="Enjoy Saving upto Rs 5,000 on Coding Ninjas Courses using Coding Ninjas Referral Discount Coupons Code."
+      content="Enjoy Saving upto Rs 5,000 on Coding Ninjas Courses using Coding Ninjas Referral Discount Coupons Code. Using the code WVGAN"
     />
+    <meta
+      property="og:image"
+      content="https://hari4742.github.io/coding-ninja-offers/assests/images/meta_img.png"
+    />
+    <!-- meta tages for twitter tags starts -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="coding ninjas offers" />
+    <meta
+      name="twitter:title"
+      content="Get Discounts on Coding Ninjas Courses"
+    />
+    <meta
+      name="twitter:description"
+      content="You can get maximum discounts on conding ninjas courses using the coupons code."
+    />
+    <meta
+      name="twitter:image"
+      content="https://hari4742.github.io/coding-ninja-offers/assests/images/meta_img.png"
+    />
+    <!-- meta tages for twitter tags ends -->
     <!-- Meta Tags Ends -->
     <title>Coding Ninja Offers</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
@@ -109,7 +129,7 @@
         <div class="btns">
           <a href="#" target="_blank" class="get-now-btn">GET NOW</a>
           <div class="copy-code-btn">
-            CODE HERE <i class="fa-regular fa-copy"></i>
+            WVGAN<i class="fa-regular fa-copy"></i>
           </div>
         </div>
       </div>
