referral count from api and updated few course links

--- a/index.html
+++ b/index.html
@@ -72,7 +72,6 @@
 
     <!-- Javascript Files -->
     <script src="./assests/scripts/script.js" defer></script>
-
     <script src="./assests/scripts/slider.js" defer></script>
 
     <!-- Link Swiper's CSS -->
@@ -122,12 +121,18 @@
         <div class="smaller-text">
           <p>Approved by Coding Ninja Team</p>
           <p>
-            Since 2021, We've benefited over <span>4534</span> Students to save
-            more than <span>Rs 71,45,201</span>.
+            Since 2021, We've benefited over
+            <span class="referralCount">4534</span> Students to save more than
+            <span class="money_saved">Rs 71,45,201</span>.
           </p>
         </div>
         <div class="btns">
-          <a href="#" target="_blank" class="get-now-btn">GET NOW</a>
+          <a
+            href="https://www.codingninjas.com/?referralCode=WVGAN"
+            target="_blank"
+            class="get-now-btn"
+            >GET NOW</a
+          >
           <div class="copy-code-btn">
             WVGAN<i class="fa-regular fa-copy"></i>
           </div>
