--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <meta
       name="keywords"
-      content="coding ninjas coupon code, coupon code for coding ninjas, coding ninjas referral code, coding ninjas referral, coding ninjas coupon, coding ninjas coupons, coding ninjas 12% discount, coding ninjas maximum discount, coding ninjas discounts, coding ninjas discount, coding ninjas coupons, coding ninjas coupon, coding ninjas coupon code, coding ninjas referral, coding ninjas referral discounts, coding ninjas referral code, coding ninjas discount"
+      content="coding ninjas coupon code, coupon code for coding ninjas, coding ninjas referral code, coding ninjas referral, coding ninjas coupon, coding ninjas coupons, coding ninjas 12% discount, coding ninjas maximum discount, coding ninjas discounts, coding ninjas discount, coding ninjas coupons, coding ninjas coupon, coding ninjas coupon code, coding ninjas referral, coding ninjas referral discounts, coding ninjas referral code, coding ninjas discount 2022, coding ninjas discount 2021, coding ninjas discount 2023"
     />
     <meta property="og:site_name" content="Coding Ninjas Offers" />
     <meta property="og:locale" content="en_US" />
