added google verification code and chges div to section for main content

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
+      name="google-site-verification"
+      content="3bJ2Lku07VOlA6OgPRrzsu2_MXHUmJHZE355SDKZPqE"
+    />
+    <meta
       name="description"
       content='Utilize Coding Ninjas Coupon Code: "WVGAN" to receive a 70% Referral Discount and a savings of around Rs 5,000 on all Coding Ninjas Courses. Best Coupon Code to use to get the maximum discount.'
     />
@@ -111,7 +115,7 @@
     <!-- Nav bar Ends -->
 
     <!-- Landing Display Starts -->
-    <div class="landing-display">
+    <section class="landing-display">
       <div class="display-text">
         <div class="larger-text">
           <p>Get <span>MAXIMUM</span></p>
@@ -144,11 +148,11 @@
           alt="person working in a laptop"
         />
       </div>
-    </div>
+    </section>
     <!-- Landing Display Ends -->
 
     <!-- Scholarship section Starts -->
-    <div class="scholarship" id="scholarship">
+    <section class="scholarship" id="scholarship">
       <div class="cnsat-img">
         <img src="./assests/images/cnsat.png" alt="cnsat logo" />
       </div>
@@ -182,11 +186,11 @@
         </div>
       </div>
       <a href="#" target="_blank" class="more-details-btn">For More Details</a>
-    </div>
+    </section>
     <!-- Scholarship section Ends -->
 
     <!-- Proofs Section Starts -->
-    <div class="proofs" id="proofs">
+    <section class="proofs" id="proofs">
       <h2>Some <span>Proofs</span> Of Discounts</h2>
       <p>
         These are the snapshots of checkout of some courses, how price differs
@@ -211,11 +215,11 @@
         <div class="swiper-button-prev"></div>
         <div class="swiper-pagination"></div>
       </div>
-    </div>
+    </section>
     <!-- Proofs Section Ends -->
 
     <!-- Course Section Starts -->
-    <div id="courses" class="courses">
+    <section id="courses" class="courses">
       <h1>COURSES</h1>
       <p>Click below to get awesome courses with <b>DISCOUNTS</b> included</p>
       <!-- <div class="course-container">
@@ -250,11 +254,11 @@
           </a>
         </div>
       </div> -->
-    </div>
+    </section>
     <!-- Course Section Ends -->
 
     <!-- Premium Courses Section Starts -->
-    <div class="premium">
+    <section class="premium">
       <h1>
         <img src="./assests/icons/002-crown.png" alt="crown" /><span
           >PREMIUM</span
@@ -289,11 +293,11 @@
           </div>
         </div> -->
       </div>
-    </div>
+    </section>
     <!-- Premium Courses Section Ends -->
 
     <!-- Features Section Starts -->
-    <div class="features" id="features">
+    <section class="features" id="features">
       <h1>Features of Coding Ninjas</h1>
       <p>Explore what else we can do for you</p>
       <div class="features-cards">
@@ -311,11 +315,11 @@
           </div>
         </div> -->
       </div>
-    </div>
+    </section>
     <!-- Features Section Ends -->
 
     <!-- Benefits Section Starts -->
-    <div class="benefits" id="benefits">
+    <section class="benefits" id="benefits">
       <div id="triangle-1"></div>
       <div id="triangle-2"></div>
       <h2>Benefits from Coding Ninja</h2>
@@ -337,11 +341,11 @@
           </p>
         </div> -->
       </div>
-    </div>
+    </section>
     <!-- Benefits Section Ends -->
 
     <!-- How To Section Starts -->
-    <div class="how-to" id="how-to">
+    <section class="how-to" id="how-to">
       <h2>How To Get Discounts?</h2>
       <p>
         Before showing you the steps to following to get discounts. Check below
@@ -430,11 +434,11 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
     <!-- How To Section Ends -->
 
     <!-- FAQ section Starts -->
-    <div class="faq" id="faq">
+    <section class="faq" id="faq">
       <h2>FAQ On Coding Ninjas</h2>
       <div class="questions">
         <div class="question">
@@ -556,7 +560,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
     <!-- FAQ section Ends -->
 
     <!-- Footer Starts -->
