changed the content

--- a/index.html
+++ b/index.html
@@ -193,8 +193,8 @@
     <section class="proofs" id="proofs">
       <h2>Some <span>Proofs</span> Of Discounts</h2>
       <p>
-        These are the snapshots of checkout of some courses, how price differs
-        after applying discount coupon and early birds discount.
+        Here are a few screenshots showing how course price changes after
+        applying a discount coupon and early bird discount.
       </p>
       <div class="swiper mySwiper">
         <div class="swiper-wrapper">
@@ -359,9 +359,8 @@
           </div>
           <div class="title">Early Bid Discounts</div>
           <div class="desc">
-            Discount of 10% to 30% is already given, This varies from time from
-            starting date of course. You can wait for the perfect time to get
-            maximum discount.
+            An already offered discount ranges from 10% to 30%. This is subject
+            to change from time to time depending on the starting date.
           </div>
           <a href="#" class="btn">CHECK ONGOING DISCOUNT</a>
         </div>
@@ -371,9 +370,9 @@
           </div>
           <div class="title">Using Referral Code</div>
           <div class="desc">
-            You can get additional 12% discount on your 1st course. After That
-            you can also refer your friends and get discounts on your next
-            course purchase.
+            Your first course can be discounted by an additional 12%.Your next
+            course purchase will become more affordable if you refer your
+            friends.
           </div>
           <a href="#" class="btn">GET MY REFERRAL</a>
         </div>
@@ -383,9 +382,8 @@
           </div>
           <div class="title">Occasional Events</div>
           <div class="desc">
-            Coding Ninjas oganizes coding events or scholarship test from time
-            to time, They are posted on the Coding Ninjas website. Check them
-            Regularly.
+            There are coding events and scholarship tests organized by Coding
+            Ninjas from time to time. Their dates are listed on their website.
           </div>
           <a href="#" class="btn">CHECK LIVE EVENTS</a>
         </div>
