added coupon code line in landing section

--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
           <p>Discount</p>
           <p>Now</p>
         </div>
+        <p class="text-coupon-code">Use Coupon Code: <span>WVGAN</span></p>
         <div class="smaller-text">
           <p>Approved by Coding Ninja Team</p>
           <p>
